    using AceAttorney.Scripts.Card.UI;
    using Sirenix.OdinInspector;

    namespace AceAttorney.Scripts.Card.Data
{
    public class CardData : SerializedScriptableObject
    {
        public CardUI cardUIPrefab;
    }
}