using UnityEngine;

namespace AceAttorney.Scripts.Card.Data
{

    [CreateAssetMenu(fileName = "WitnessCardData", menuName = "CardData/WitnessCardData")]
    public class WitnessCardData : UsableCardData
    {
        public Sprite witnessSprite;
    }
}